force-app/main/default/objects/Case/fields/FEC_IPP_Term__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Term__c</fullName>
    <description>Giá trị kì hạn</description>
    <label>Tenor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>