force-app/main/default/objects/Case/fields/FEC_IPP_To_Close__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_To_Close__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IPP To Close</label>
    <referenceTo>FEC_IPP__c</referenceTo>
    <relationshipLabel>Cases Closing This IPP</relationshipLabel>
    <relationshipName>Cases_Closing_This_IPP</relationshipName>
    <type>Lookup</type>
</CustomField>