force-app/main/default/objects/Case/fields/FEC_IPP_Transaction__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Transaction selected for IPP Conversion on this Case.</description>
    <label>IPP Transaction</label>
    <referenceTo>FEC_Transaction__c</referenceTo>
    <relationshipLabel>Cases (IPP Conversion)</relationshipLabel>
    <relationshipName>Cases_IPP_Conversion</relationshipName>
    <type>Lookup</type>
</CustomField>