force-app/main/default/objects/Case/fields/FEC_Is_Call_API_Success__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Call_API_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trường dùng để lưu trạng thái call api sau khi call api Reset Pin</description>
    <label>Is Call API Success</label>
    <type>Checkbox</type>
</CustomField>