force-app/main/default/objects/Case/fields/FEC_Is_Case_Participants__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Case_Participants__c</fullName>
    <description>Trường tạo để check listview my completed case (user đang xem có nằm trong danh sách tham gia xử lý case không)</description>
    <formula>OR(
CONTAINS(FEC_Case_Participants__c, $User.Id),
CONTAINS(FEC_Case_Participants__c, LEFT($User.Id, 15))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Case Participants</label>
    <type>Checkbox</type>
</CustomField>