force-app/main/default/objects/Case/fields/FEC_Is_Chat_Automation__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Chat_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kiểm tra xem case có phải là automation hay không</description>
    <label>Is Chat Automation</label>
    <type>Checkbox</type>
</CustomField>