force-app/main/default/objects/Case/fields/FEC_Is_Created_From_Search__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Created_From_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Created From Search</label>
    <type>Checkbox</type>
</CustomField>