force-app/main/default/objects/Case/fields/FEC_Is_CS_Customer_Care__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_CS_Customer_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CS Customer Care</label>
    <type>Checkbox</type>
</CustomField>