force-app/main/default/objects/Case/fields/FEC_Is_DNB__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_DNB__c</fullName>
    <description>Xác định người dùng đã chọn thực hiện Callout DNB hay chưa</description>
    <label>Is DNB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>