force-app/main/default/objects/Case/fields/FEC_Is_In_Create_new_mode__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_In_Create_new_mode__c</fullName>
    <description>Trường dùng cho record page để show thông tin</description>
    <formula>IF(NOT(ISBLANK(Id)) , FALSE, TRUE)</formula>
    <label>Is In Create new mode</label>
    <type>Checkbox</type>
</CustomField>