force-app/main/default/objects/Case/fields/FEC_Is_Manual__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trường xác định Interaction tạo thủ công</description>
    <label>Is Manual</label>
    <type>Checkbox</type>
</CustomField>