force-app/main/default/objects/Case/fields/FEC_Is_My_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_My_Follow_Up__c</fullName>
    <description>My Follow-Up</description>
    <formula>AND(
  OR(
    CONTAINS(FEC_Follow_Up_User__c, CASESAFEID($User.Id)),
    CONTAINS(FEC_Follow_Up_User__c, $User.Id)
  ),
  OR(
    AND(
      OR(ISPICKVAL(Status, "Open"), ISPICKVAL(Status, "Pending")),
      OwnerId &lt;&gt; $User.Id
    ),
    NOT(OR(ISPICKVAL(Status, "Open"), ISPICKVAL(Status, "Pending")))
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Follow Up</label>
    <type>Checkbox</type>
</CustomField>