force-app/main/default/objects/Case/fields/FEC_Is_MyCaseAPI_Interaction__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_MyCaseAPI_Interaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check xem Interaction có được tạo từ MyCaseAPI không</description>
    <label>Is MyCaseAPI Interaction</label>
    <type>Checkbox</type>
</CustomField>