force-app/main/default/objects/Case/fields/FEC_Is_Non_Restricted_Group__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Non_Restricted_Group__c</fullName>
    <formula>NOT(
    OR(
        ISPICKVAL($User.FEC_User_Group__c , &quot;CO&quot;),
        ISPICKVAL($User.FEC_User_Group__c, &quot;CL&quot;),
        ISPICKVAL($User.FEC_User_Group__c, &quot;CP&quot;),
        ISPICKVAL($User.FEC_User_Group__c, &quot;PM&quot;),
        ISPICKVAL($User.FEC_User_Group__c, &quot;DS&quot;),
        ISPICKVAL($User.FEC_User_Group__c, &quot;TS&quot;),
        ISPICKVAL($User.FEC_User_Group__c, &quot;CA&quot;),
        ISPICKVAL($User.FEC_User_Group__c, &quot;IA&quot;),
        ISPICKVAL($User.FEC_User_Group__c, &quot;IT&quot;)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Non Restricted Group</label>
    <type>Checkbox</type>
</CustomField>