force-app/main/default/objects/Case/fields/FEC_Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Owner__c</fullName>
    <description>Trường tạo phục vụ dev để biết User đang xem có phải owner hay không phục vụ tính năng : chỉ hiển thị nút execute với owner</description>
    <formula>$User.Id =  OwnerId</formula>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>