force-app/main/default/objects/Case/fields/FEC_Is_Owner_Or_Assigned__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Owner_Or_Assigned__c</fullName>
    <description>Formula checkbox để lọc "My Pending Cases".
TRUE khi user đang xem là Owner của Case (và chưa có assignment) HOẶC ID của user có trong trường FEC_Assignment_Users__c.
Dùng cho List View filter thay thế filterScope=Mine vì cần OR logic.</description>
    <formula>OR(AND(OwnerId = $User.Id, FEC_Assignment_Count__c = 0), CONTAINS(FEC_Assignment_Users__c, $User.Id), CONTAINS(FEC_Assignment_Users__c, LEFT($User.Id, 15)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner Or Assigned</label>
    <type>Checkbox</type>
</CustomField>