force-app/main/default/objects/Case/fields/FEC_Is_PIN_Reset_Success__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_PIN_Reset_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lưu trạng thái reset pin thành công</description>
    <label>Is PIN Reset Success</label>
    <type>Checkbox</type>
</CustomField>