force-app/main/default/objects/Case/fields/FEC_Is_Reply_Interaction_email__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Reply_Interaction_email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trường đánh dấu đây là Interaction được tạo do Khách hàng reply một email mà BU gửi ra từ một Interaction</description>
    <label>Is Reply Interaction email</label>
    <type>Checkbox</type>
</CustomField>