force-app/main/default/objects/Case/fields/FEC_Is_Routing_Action_Display__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Routing_Action_Display__c</fullName>
    <label>Is Routing Action Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>