force-app/main/default/objects/Case/fields/FEC_Is_Save_Closed__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Save_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trường đánh dấu Case được đóng</description>
    <label>Is Save&amp;Closed</label>
    <type>Checkbox</type>
</CustomField>