force-app/main/default/objects/Case/fields/FEC_Is_Submited__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Submited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trường đánh dấu Case được submit</description>
    <label>Is Submited</label>
    <type>Checkbox</type>
</CustomField>