force-app/main/default/objects/Case/fields/FEC_Is_Test_API__c.field-meta.xml
<CustomField>
    <fullName>FEC_Is_Test_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test API</label>
    <type>Checkbox</type>
</CustomField>