force-app/main/default/objects/Case/fields/FEC_IsImported__c.field-meta.xml
<CustomField>
    <fullName>FEC_IsImported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsImported</label>
    <type>Checkbox</type>
</CustomField>