force-app/main/default/objects/Case/fields/FEC_KYC_Result__c.field-meta.xml
<CustomField>
    <fullName>FEC_KYC_Result__c</fullName>
    <label>KYC Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KYC_Result</valueSetName>
    </valueSet>
</CustomField>