force-app/main/default/objects/Case/fields/FEC_KYC_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_KYC_Status__c</fullName>
    <description>trÆ°á»ng phá»¥c vá»¥ kÃªnh Interaction Chat</description>
    <label>KYC Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>