force-app/main/default/objects/Case/fields/FEC_KYC_Stauts__c.field-meta.xml
<CustomField>
    <fullName>FEC_KYC_Stauts__c</fullName>
    <description>trường phục vụ kênh Interaction Chat</description>
    <label>KYC Stauts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>