force-app/main/default/objects/Case/fields/FEC_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>