force-app/main/default/objects/Case/fields/FEC_Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_Updated_By__c</fullName>
    <description>Email ID của người chỉnh sửa gần nhất
Trường tạo mới để hiển thị trên Case details và interaction details do trường standard không hiển thị được đúng  yêu cầu</description>
    <formula>IF(
    OR(
        TRIM(LOWER( LastModifiedBy.LastName)) = &quot;platform integration user&quot;,
        TRIM(LOWER(LastModifiedBy.Alias)) = &quot;platint&quot;
    ),
    &quot;system&quot;,
    IF(
        RecordType.Name = &quot;Interaction&quot;,
        LEFT(LastModifiedBy.Email,FIND(&quot;@&quot;,LastModifiedBy.Email)-1),
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated By</label>
    <type>Text</type>
</CustomField>