force-app/main/default/objects/Case/fields/FEC_Last_Updated_By_View__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_Updated_By_View__c</fullName>
    <label>Last Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>