force-app/main/default/objects/Case/fields/FEC_Last_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_Updated_On__c</fullName>
    <description>Trường tạo mới để hiển thị trên Case details và interaction details do trường standard không hiển thị được đúng  yêu cầu</description>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Updated On</label>
    <type>DateTime</type>
</CustomField>