force-app/main/default/objects/Case/fields/FEC_Last_Updated_On_View__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_Updated_On_View__c</fullName>
    <label>Last Updated On</label>
    <type>DateTime</type>
</CustomField>