force-app/main/default/objects/Case/fields/FEC_Link_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Link_ID__c</fullName>
    <description>Là ID hiển thị với người dùng của cả Interaction và Case:
Nếu là Case record thì đây là Case ID
Nếu là Interaction record thì đây là Interaction ID</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, FEC_ID_Search__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID</label>
    <type>Text</type>
</CustomField>