force-app/main/default/objects/Case/fields/FEC_Manager_ID_List_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Manager_ID_List_2__c</fullName>
    <label>Manager ID List 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>