force-app/main/default/objects/Case/fields/FEC_Manager_ID_List__c.field-meta.xml
<CustomField>
    <fullName>FEC_Manager_ID_List__c</fullName>
    <description>Trường thống kê các ID của manager của Case Owner hiện tại</description>
    <label>Manager ID List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>