force-app/main/default/objects/Case/fields/FEC_Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Max_Amount__c</fullName>
    <label>Max Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>