force-app/main/default/objects/Case/fields/FEC_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>