force-app/main/default/objects/Case/fields/FEC_MRC_Request_Handling_Option__c.field-meta.xml
<CustomField>
    <fullName>FEC_MRC_Request_Handling_Option__c</fullName>
    <description>Trường có 2 giá trị ở định dạng radio button</description>
    <label>MRC Request Handling Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel previous request, create new request</fullName>
            </value>
            <value>
                <fullName>Cancel new request, continue previous request handling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>