force-app/main/default/objects/Case/fields/FEC_MyCase_Creator__c.field-meta.xml
<CustomField>
    <fullName>FEC_MyCase_Creator__c</fullName>
    <label>MyCase Creator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>