force-app/main/default/objects/Case/fields/FEC_National_ID_Passport_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_National_ID_Passport_ID__c</fullName>
    <externalId>true</externalId>
    <label>National ID/ Passport ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>