force-app/main/default/objects/Case/fields/FEC_New_Block_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_New_Block_Code__c</fullName>
    <description>Mã Block Code mới ứng với lý do khoá thẻ đã chọn</description>
    <label>New Block Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FEC_Card_Block_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>