force-app/main/default/objects/Case/fields/FEC_New_Block_Code_Card_Replace__c.field-meta.xml
<CustomField>
    <fullName>FEC_New_Block_Code_Card_Replace__c</fullName>
    <label>New Block Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FEC_Card_Replacement_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>