force-app/main/default/objects/Case/fields/FEC_New_SubCategory__c.field-meta.xml
<CustomField>
    <fullName>FEC_New_SubCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nature Of Case mới do đơn vị tiếp nhận xác định lại</description>
    <label>New SubCategory</label>
    <referenceTo>FEC_Sub_Category__c</referenceTo>
    <relationshipLabel>Cases (New SubCategory)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>