force-app/main/default/objects/Case/fields/FEC_NFU_Description_Result__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Description_Result__c</fullName>
    <label>NFU Description Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <label>Pending</label>
            </value>
            <value>
                <fullName>ALREADY_MARKED</fullName>
                <label>Already Marked</label>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
                <label>Success</label>
            </value>
            <value>
                <fullName>ERROR</fullName>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>