force-app/main/default/objects/Case/fields/FEC_NFU_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Reason__c</fullName>
    <label>NFU Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>