force-app/main/default/objects/Case/fields/FEC_NFU_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Started_Date__c</fullName>
    <label>NFU Started Date</label>
    <type>DateTime</type>
</CustomField>