force-app/main/default/objects/Case/fields/FEC_NFU_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_NFU_Status__c</fullName>
    <label>NFU Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>