force-app/main/default/objects/Case/fields/FEC_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>FEC_On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Hold</label>
    <type>Checkbox</type>
</CustomField>