force-app/main/default/objects/Case/fields/FEC_Original_Info_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>FEC_Original_Info_Date_of_Birth__c</fullName>
    <description>Ngày sinh của khách hàng trước khi thay đổi</description>
    <label>Original Info - Date of Birth</label>
    <type>Date</type>
</CustomField>