force-app/main/default/objects/Case/fields/FEC_Original_Info_Date_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Original_Info_Date_of_Issue__c</fullName>
    <description>Ngày cấp của khách hàng trước khi thay đổi</description>
    <label>Original Info - Date of Issue</label>
    <type>Date</type>
</CustomField>