force-app/main/default/objects/Case/fields/FEC_Original_Info_Email__c.field-meta.xml
<CustomField>
    <fullName>FEC_Original_Info_Email__c</fullName>
    <description>Email của khách hàng trước khi thay đổi</description>
    <label>Original Info - Email</label>
    <type>Email</type>
</CustomField>