force-app/main/default/objects/Case/fields/FEC_Original_Info_First_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Original_Info_First_Name__c</fullName>
    <description>Tên của khách hàng trước khi thay đổi</description>
    <label>Original Info - First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>