force-app/main/default/objects/Case/fields/FEC_Original_Info_Gender__c.field-meta.xml
<CustomField>
    <fullName>FEC_Original_Info_Gender__c</fullName>
    <description>Giới tính của khách hàng trước khi thay đổi</description>
    <label>Original Info - Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender</valueSetName>
    </valueSet>
</CustomField>