force-app/main/default/objects/Case/fields/FEC_Original_Info_National_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Original_Info_National_ID__c</fullName>
    <description>CCCD của khách hàng trước khi thay đổi</description>
    <label>Original Info - National ID/ Passport ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>