force-app/main/default/objects/Case/fields/FEC_Original_Info_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Original_Info_Phone_Number__c</fullName>
    <label>Original Info - Phone Number</label>
    <type>Phone</type>
</CustomField>