force-app/main/default/objects/Case/fields/FEC_Original_Info_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Original_Info_Phone_Type__c</fullName>
    <defaultValue>&quot;Primary Phone&quot;</defaultValue>
    <label>Original Info - Phone Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>