force-app/main/default/objects/Case/fields/FEC_Original_Info_Place_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Original_Info_Place_of_Issue__c</fullName>
    <description>Nơi cấp của khách hàng trước khi thay đổi</description>
    <label>Original Info - Place of Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>