force-app/main/default/objects/Case/fields/FEC_Other_Subchannel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Other_Subchannel__c</fullName>
    <label>Other Sub-channel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>