force-app/main/default/objects/Case/fields/FEC_Outcome_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Outcome_Code__c</fullName>
    <description>Mã code nhập trên Interaction khi User thực hiện wrap-up</description>
    <label>Outcome Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hoàn tất/ Đã phản hồi</fullName>
            </value>
            <value>
                <fullName>Liên hệ lại sau</fullName>
            </value>
            <value>
                <fullName>Rớt cuộc/ Cúp máy ngang</fullName>
            </value>
            <value>
                <fullName>Không có/ Mất tín hiệu</fullName>
            </value>
            <value>
                <fullName>Nhầm line</fullName>
            </value>
            <value>
                <fullName>Chuyển line</fullName>
            </value>
            <value>
                <fullName>Gặp người thân</fullName>
            </value>
            <value>
                <fullName>Lỗi hệ thống</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Hộp thư thoại</fullName>
            </value>
            <value>
                <fullName>Nhầm số</fullName>
            </value>
            <value>
                <fullName>Thư rác</fullName>
            </value>
            <value>
                <fullName>Mất kết nối</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>