force-app/main/default/objects/Case/fields/FEC_Owner_In_Assignment_Users__c.field-meta.xml
<CustomField>
    <fullName>FEC_Owner_In_Assignment_Users__c</fullName>
    <description>Formula checkbox cho queue listview.
TRUE khi OwnerId hiện tại của Case (User Id hoặc Queue Id) có trong FEC_Assignment_Users__c — tức Case đang được route active cho owner.
Hỗ trợ cả 15-char và 18-char Id để tránh sai khớp.</description>
    <formula>OR(CONTAINS(FEC_Assignment_Users__c, OwnerId), CONTAINS(FEC_Assignment_Users__c, LEFT(OwnerId, 15)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner In Assignment Users</label>
    <type>Checkbox</type>
</CustomField>