force-app/main/default/objects/Case/fields/FEC_Owner_Is_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_Owner_Is_User__c</fullName>
    <description>True khi Case Owner là User (không phải Queue). Dùng lọc list view My Team.</description>
    <formula>AND(ISBLANK(Owner:Queue.Id), OwnerId &lt;&gt; $User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Is User</label>
    <type>Checkbox</type>
</CustomField>