force-app/main/default/objects/Case/fields/FEC_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Parent_ID__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  Parent.FEC_ID_Search__c  , &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent ID</label>
    <type>Text</type>
</CustomField>