force-app/main/default/objects/Case/fields/FEC_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Phone_Number__c</fullName>
    <description>Số điện thoại khách hàng đã liên hệ</description>
    <label>Interaction Phone</label>
    <type>Phone</type>
</CustomField>