force-app/main/default/objects/Case/fields/FEC_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Phone_Type__c</fullName>
    <description>Case Info Fix/Original Infor: Loại Phone ban đầu</description>
    <label>Phone Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>