force-app/main/default/objects/Case/fields/FEC_Process_Action_Count__c.field-meta.xml
<CustomField>
    <fullName>FEC_Process_Action_Count__c</fullName>
    <label>Process Action Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>