force-app/main/default/objects/Case/fields/FEC_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Product_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loạn sản phẩm hỗ trợ</description>
    <label>Product Type</label>
    <referenceTo>FEC_Product_Type__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>