force-app/main/default/objects/Case/fields/FEC_Product_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>FEC_Product_Type_Text__c</fullName>
    <description>Hiển thị thông Product Type dưới dạng Text</description>
    <formula>FEC_Product_Type__r.Name</formula>
    <label>Product Type (Text)</label>
    <type>Text</type>
</CustomField>