force-app/main/default/objects/Case/fields/FEC_RD_Card_Ops_Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_RD_Card_Ops_Assessment_Type__c</fullName>
    <description>Đánh giá của RD Card Ops đối với case</description>
    <label>RD Card Ops Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FEC_Assessment_Type</valueSetName>
    </valueSet>
</CustomField>