force-app/main/default/objects/Case/fields/FEC_RD_Payment_Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_RD_Payment_Assessment_Type__c</fullName>
    <description>Đánh giá của RD Payment đối với case</description>
    <label>RD Payment Assessment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FEC_Assessment_Type</valueSetName>
    </valueSet>
</CustomField>