force-app/main/default/objects/Case/fields/FEC_RD_Payment_Contract_Assessment__c.field-meta.xml
<CustomField>
    <fullName>FEC_RD_Payment_Contract_Assessment__c</fullName>
    <description>Đánh giá của RD PM cho yêu cầu đóng HĐ</description>
    <label>RD Payment Contract Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hợp đồng không thể đóng</fullName>
            </value>
            <value>
                <fullName>Hợp đồng có thể đóng với tờ trình</fullName>
            </value>
            <value>
                <fullName>Hợp đồng có thể đóng không cần tờ trình</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>