force-app/main/default/objects/Case/fields/FEC_Recently_Auto_Case_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FEC_Recently_Auto_Case_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recently Auto Case Assignment</label>
    <referenceTo>FEC_Case_Assignment__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>